# robotick-core-workloads

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  TODO.md  build_esp32.sh  build_esp32_m5.sh  build_esp32s3.sh  build_esp32s3_m5.sh  build_linux_debug.sh
.github/workflows/: ci.build-matrix.yml
cpp/: CMakeLists.txt
cpp/include/robotick/boards/m5/: BoardSupport.h
cpp/include/robotick/systems/: AudioBuffer.h  AudioSystem.h  Camera.h  Canvas.h  Image.h  MqttClient.h  MqttFieldSync.h  MuJoCoCallbacks.h  MuJoCoPhysics.h  MuJoCoRenderContext.h  MuJoCoSceneRegistry.h  PythonRuntime.h  Renderer.h
cpp/include/robotick/systems/audio/: AudioBuffer.h  AudioFrame.h  AudioSystem.h  NoiseSuppressor.h  WavFile.h
cpp/include/robotick/systems/auditory/: CochlearFrame.h  CochlearTransform.h  HarmonicPitch.h  HarmonicPitchStabilizer.h  ProsodyFusion.h  ProsodyFusionMath.h  ProsodyMath.h  ProsodyState.h  SnakePitchTracker.h  SourceCandidate.h  SpeechToText.h  TemporalGrouping.h  TemporalGroupingV0.h
cpp/src/robotick/boards/m5/: BoardSupport.cpp
cpp/src/robotick/systems/: AudioBuffer.cpp  AudioSystem.cpp  Camera_desktop.cpp  Camera_esp32.cpp  Canvas.cpp  Image.cpp  MqttClient.cpp  MqttFieldSync.cpp  MuJoCoPhysics.cpp  MuJoCoRenderContext.cpp  MuJoCoSceneRegistry.cpp  NetworkManager.cpp  PythonRuntime.cpp  RenderMode.cpp  Renderer_desktop.cpp  Renderer_esp32.cpp
cpp/src/robotick/systems/audio/: AudioBuffer.cpp  AudioFrame.cpp  AudioSystem.cpp  NoiseSuppressor.cpp  WavFile.cpp
cpp/src/robotick/systems/auditory/: CochlearFrame.cpp  CochlearTransform.cpp  HarmonicPitch.cpp  ProsodyFusion.cpp  ProsodyState.cpp  SnakePitchTracker.cpp  SourceCandidate.cpp  SpeechToText.cpp  TemporalGrouping.cpp  TemporalGroupingV0.cpp
cpp/src/robotick/workloads/actuators/: BaseXWorkload.cpp
cpp/src/robotick/workloads/audio/: MicWorkload.cpp  MicWorkload.yaml  MultiToneGeneratorWorkload.cpp  NoiseSuppressWorkload.cpp  NoiseSuppressWorkload.yaml  SineWaveGeneratorWorkload.cpp  SineWaveGeneratorWorkload.yaml  SpeakerWorkload.cpp  SpeakerWorkload.yaml  WavPlayerWorkload.cpp  WavPlayerWorkload.yaml  WavRecorderWorkload.cpp
cpp/src/robotick/workloads/auditory/: CochlearTransformWorkload.cpp  CochlearTransformWorkload.yaml  CochlearVisualizerWorkload.cpp  CochlearVisualizerWorkload.yaml  HarmonicPitchWorkload.cpp  HarmonicPitchWorkload.yaml  HarmonicWaveGeneratorWorkload.cpp  HarmonicWaveGeneratorWorkload.yaml  ProsidyWorkload.cpp  ProsidyWorkload.yaml  ProsodyAnalyserWorkload.cpp  ProsodyAnalyserWorkload.yaml  ProsodyFusionWorkload.cpp  ProsodyFusionWorkload.yaml  ProsodyWaveGeneratorWorkload.cpp  ProsodyWaveGeneratorWorkload.yaml  SpeechToTextBufferWorkload.cpp  SpeechToTextBufferWorkload.yaml  SpeechToTextWorkload.cmake  SpeechToTextWorkload.cpp  SpeechToTextWorkload.yaml  TemporalGroupingV0Workload.cpp  TemporalGroupingV0Workload.yaml  TemporalGroupingWorkload.cpp  TemporalGroupingWorkload.yaml
cpp/src/robotick/workloads/composition/: SequencedGroupWorkload.cpp  SyncedGroupWorkload.cpp
cpp/src/robotick/workloads/control/: RemoteControlWorkload.cpp  RemoteControlWorkload.yaml  SteeringMixerWorkload.cpp
cpp/src/robotick/workloads/diagnostics/: ConsoleTelemetryWorkload.cpp  TimingDiagnosticsWorkload.cpp
cpp/src/robotick/workloads/examples/: HelloWorkload.cpp  StubWorkload.cpp  TemplateWorkload.cpp
cpp/src/robotick/workloads/scripting/: PythonWorkload.cpp  PythonWorkload.yaml
cpp/src/robotick/workloads/sensors/: CameraWorkload.cpp  CameraWorkload.yaml  ImuWorkload.cpp
cpp/src/robotick/workloads/simulation/: MuJoCoCameraWorkload.cpp  MuJoCoCameraWorkload.yaml  MuJoCoPhysicsWorkload.cpp  MuJoCoPhysicsWorkload.yaml  MuJoCoWorkload.cpp  MuJoCoWorkload.yaml
cpp/src/robotick/workloads/telemetry/: MqttClientWorkload.cpp
cpp/src/robotick/workloads/transform/: BoolToFloatWorkload.cpp  LowPassFilterWorkload.cpp  QuatToEulerWorkload.cpp  WeightedSumWorkload.cpp
cpp/src/robotick/workloads/ui/: CanvasWorkload.cpp  CanvasWorkload.md  CanvasWorkload.yaml  FaceDisplayWorkload.cpp  FaceDisplayWorkload.deps.yaml  FaceDisplayWorkload.yaml  HeartbeatDisplayWorkload.cpp  HeartbeatDisplayWorkload.yaml
cpp/tests/: CMakeLists.txt  install_deps.sh
cpp/tests/data/canvas/: simple.canvas.yaml
cpp/tests/data/mujoco/: blue_background.xml  minimal.xml
cpp/tests/systems/: AudioSystem.test.cpp  CanvasScene.test.cpp  CochlearTransform.test.cpp  HarmonicPitch.test.cpp  HarmonicPitchStabilizer.test.cpp  HarmonicPitch_data.cpp  MqttClient.test.cpp  MqttClientIntegration.test.cpp  MqttFieldSync.test.cpp  MuJoCoPhysics.test.cpp  MuJoCoRenderContext.test.cpp  MuJoCoSceneRegistry.test.cpp  NoiseSuppressor.test.cpp  ProsodyFusionMath.test.cpp  PythonRuntime.test.cpp  SpeechToText.test.cpp  TemporalGrouping.test.cpp  TemporalGroupingV0.test.cpp  TemporalGrouping_data.cpp  WavFile.test.cpp
cpp/tests/systems/auditory/: SnakePitchTracker.test.cpp
cpp/tests/workloads/: ProsodyAnalyserWorkload.test.cpp  PythonWorkload.test.cpp  SequencedGroupWorkload.test.cpp  SyncedGroupWorkload.test.cpp  SyncedGroupWorkload_TemporalOrdering.test.cpp  TemplateWorkload.test.cpp
python/robotick/workloads/optional/test/: hello_workload.py
tools/: code_policy_check.py  make_esp32_symlinks.sh  mqtt_broker.py
tools/esp32-compile-check/: 2_idf_build.sh  CMakeLists.txt
tools/esp32-compile-check/main/: CMakeLists.txt  esp32_testbed_main.cpp
